ingress-wear-watch-diff-urls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.example.com
    http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 80
  - host: watch.example.com
    http:
      paths:
      - backend:
          serviceName: watch-service
          servicePort: 80
